@startuml
class ReceiveForJsonClass {
}
class Item {
    + id : string <<get>> <<set>>
    + etag : string <<get>> <<set>>
    + selfLink : string <<get>> <<set>>
}
class Volumeinfo {
    + title : string <<get>> <<set>>
    + publishedDate : string <<get>> <<set>>
    + pageCount : int <<get>> <<set>>
    + printType : string <<get>> <<set>>
    + maturityRating : string <<get>> <<set>>
    + allowAnonLogging : bool <<get>> <<set>>
    + contentVersion : string <<get>> <<set>>
    + previewLink : string <<get>> <<set>>
    + infoLink : string <<get>> <<set>>
    + canonicalVolumeLink : string <<get>> <<set>>
    + description : string <<get>> <<set>>
    + averageRating : float <<get>> <<set>>
    + ratingsCount : int <<get>> <<set>>
    + publisher : string <<get>> <<set>>
}
class Readingmodes {
    + text : bool <<get>> <<set>>
    + image : bool <<get>> <<set>>
}
class Imagelinks {
    + smallThumbnail : string <<get>> <<set>>
    + thumbnail : string <<get>> <<set>>
}
class Panelizationsummary {
    + containsEpubBubbles : bool <<get>> <<set>>
    + containsImageBubbles : bool <<get>> <<set>>
}
class Industryidentifier {
    + type : string <<get>> <<set>>
    + identifier : string <<get>> <<set>>
}
class Saleinfo {
    + country : string <<get>> <<set>>
    + saleability : string <<get>> <<set>>
    + isEbook : bool <<get>> <<set>>
}
class Accessinfo {
    + country : string <<get>> <<set>>
    + viewability : string <<get>> <<set>>
    + embeddable : bool <<get>> <<set>>
    + publicDomain : bool <<get>> <<set>>
    + textToSpeechPermission : string <<get>> <<set>>
    + webReaderLink : string <<get>> <<set>>
    + accessViewStatus : string <<get>> <<set>>
    + quoteSharingAllowed : bool <<get>> <<set>>
}
class Epub {
    + isAvailable : bool <<get>> <<set>>
}
class Pdf {
    + isAvailable : bool <<get>> <<set>>
}
class Searchinfo {
    + textSnippet : string <<get>> <<set>>
}
Item --> "volumeInfo" Volumeinfo
Item --> "saleInfo" Saleinfo
Item --> "accessInfo" Accessinfo
Item --> "searchInfo" Searchinfo
Volumeinfo --> "readingModes" Readingmodes
Volumeinfo --> "imageLinks" Imagelinks
Volumeinfo --> "panelizationSummary" Panelizationsummary
Accessinfo --> "epub" Epub
Accessinfo --> "pdf" Pdf
@enduml
